<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageFares"
        android:layout_width="296dp"
        android:layout_height="299dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fares" />

    <TextView
        android:id="@+id/titleFares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/bold"
        android:text="@string/fare"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionFare1"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/bold"
        android:text="@string/descriptionFare1"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFares" />

    <TextView
        android:id="@+id/descriptionFare2"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/regular"
        android:text="@string/descriptionFare2"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFares" />

    <TextView
        android:id="@+id/descriptionFare3"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/regular"
        android:text="@string/descriptionFare3"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/descriptionFare2" />

    <TextView
        android:id="@+id/descriptionFare6"
        android:layout_width="295dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/regular"
        android:text="@string/descriptionFare6"
        android:textColor="@color/dark_blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionFare5" />

    <TextView
        android:id="@+id/descriptionFare5"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/regular"
        android:text="@string/descriptionFare5"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/descriptionFare4" />

    <TextView
        android:id="@+id/descriptionFare4"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/regularitalic"
        android:text="@string/descriptionFare4"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/descriptionFare3" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/titleFares"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tarajbluenew" />

</androidx.constraintlayout.widget.ConstraintLayout>