<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Destination">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="183dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/white_border"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/search_a_destination"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_above="@+id/use_my_location_as_destination"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_tara"
            android:elevation="5dp"
            android:fontFamily="@font/bold"
            android:text="@string/promptSearchDestination"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/use_my_location_as_destination"
            android:layout_width="176dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="65dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/set_location_as"
            android:elevation="5dp"
            android:text="@string/setAsDestination"
            android:textAllCaps="true"
            android:textColor="@color/dark_blue"
            android:textSize="15sp"
            android:fontFamily="@font/bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.043" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/DestinationImage"
        android:layout_width="0dp"
        android:layout_height="283dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:srcCompat="@drawable/destiillus" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/bold"
        android:text="@string/destinationActivityText"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DestinationImage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/backarrowbnew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>